scuba/prerequisites/metadata/objects/VoiceCallTranscript__c/VoiceCallTranscript__c.object-meta.xml
<CustomObject>
    <label>VoiceCallTranscript</label>
    <nameField>
        <label>ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VoiceCallTranscripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>