scuba/prerequisites/metadata/objects/VoiceCallTranscript__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>