scuba/prerequisites/metadata/objects/VoiceCallTranscript__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>EndTime__c</label>
    <type>Date</type>
</CustomField>