scuba/prerequisites/metadata/objects/VoiceCallTranscript__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>Id__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>