scuba/prerequisites/metadata/objects/VoiceCallTranscript__c/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LeadId__c</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>VoiceCallTranscript_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>