scuba/prerequisites/metadata/objects/VoiceCallTranscript__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpportunityId__c</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>VoiceCallTranscript_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>